force-app/main/default/objects/VOI_Documents__mdt/VOI_Documents__mdt.object-meta.xml
<CustomObject>
    <label>VOI Documents</label>
    <pluralLabel>VOI Documents</pluralLabel>
</CustomObject>