force-app/main/default/objects/VOI_Documents__mdt/fields/Doc_Name__c.field-meta.xml
<CustomField>
    <fullName>Doc_Name__c</fullName>
    <label>Doc Name</label>
    <length>20</length>
    <type>Text</type>
</CustomField>