force-app/main/default/objects/VOI_Documents__mdt/fields/front_nd_Back__c.field-meta.xml
<CustomField>
    <fullName>front_nd_Back__c</fullName>
    <defaultValue>false</defaultValue>
    <label>front nd Back</label>
    <type>Checkbox</type>
</CustomField>